Fix line breaks in chat messages

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -206,6 +206,7 @@ li {
 .messages .message .text_wrapper .text {
   font-size: 18px;
   font-weight: 300;
+  word-wrap: break-word;
 }
 
 .bottom_wrapper {
